Fixes card layout issues on the homepage

--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -87,4 +87,9 @@
     width: auto;
     position: relative;
   }
+
+  .hero-info-source span {
+    display: inline-block;
+    max-width: 60%;
+  }
 }
